array.island.Island.scala.error
Erreur de compilation :
Island:5: error: value lenth is not a member of Array[Int]
  for (i <- 1 to num.lenth){
                     ^